--- a/quemsomos.html
+++ b/quemsomos.html
@@ -10,7 +10,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Sansita+Swashed:wght@700&display=swap" rel="stylesheet">
 
 </head>
-<body>
+<body id="body-fundo">
   <header class="fixed-top">
     <nav class="navbar navbar-expand-lg navbar-light bg-light pb-0 pt-0"  id="body-fundo">
       <div class="container-fluid" id="color-fundo" id="text-navbar">
@@ -42,12 +42,43 @@
 
   </main>
 
+<!-- Modal -->
+  <div class="modal fade" id="modal-contato" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
+    <div class="modal-dialog">
+      <div class="modal-content">
+        <div class="modal-header">
+          <h5 class="modal-title" id="exampleModalLabel">Entre em contato</h5>
+          <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+        </div>
+        <div class="modal-body">
 
-  <footer>
-    <h5 class="text-center">&copy;opyright</h5>
-    <p class="text-center texto-rodape fonte-especial">Todos os direitos reservados<a class="direitos" href="mailto:brenoepitacio@gmail.com"> Breno Epitácio</a></p>
-  </footer>
+          <form action="https://formspree.io/f/xoqprzbn" method="POST">
 
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/js/bootstrap.bundle.min.js" integrity="sha384-ygbV9kiqUc6oa4msXn9868pTtWMgiQaeYH7/t7LECLbyPA2x65Kgf80OJFdroafW" crossorigin="anonymous"></script>
+            <div class="mb-3">
+            <label for="formGroupExampleInput" class="form-label">Nome completo</label>
+            <input class="form-control" id="name" name="name" placeholder="Ana maria" type="text" required>
+            </div>
+
+            <div class="mb-3">
+            <label for="exampleFormControlInput1" class="form-label">Endereço de e-mail</label>
+            <input class="form-control" id="email" name="email" placeholder="exemplo@email.com" type="email" required>
+            </div>
+            
+            <div class="mb-3">
+            <label for="exampleFormControlTextarea1" class="form-label">Deixe seu comentário</label>
+            <textarea class="form-control" id="comments" name="comments" placeholder="Comentário" rows="5"></textarea><br>
+            </div>
+
+            <button class="btn btn-default pull-right btn-primary" type="submit">Enviar</button>
+          </form>
+        </div>
+      </div>
+    </div>
+  </div>
+    <footer>
+      <h5 class="text-center">&copy;opyright</h5>
+      <p class="text-center texto-rodape fonte-especial">Todos os direitos reservados<a class="direitos" href="mailto:brenoepitacio@gmail.com"> Breno Epitácio</a></p>
+    </footer>
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/js/bootstrap.bundle.min.js" integrity="sha384-ygbV9kiqUc6oa4msXn9868pTtWMgiQaeYH7/t7LECLbyPA2x65Kgf80OJFdroafW" crossorigin="anonymous"></script>
 </body>
 </html>
