--- a/index.html
+++ b/index.html
@@ -75,59 +75,25 @@
     </a>
   </section>
 
-  <section class="titulo-principal text-center p-4">
+  <section class="titulo-principal text-center p-3">
     <h1 class="fonte-especial">Sejam bem vindos a CETI</h1>
-    <p class="fonte-especial pb-3">Procuramos sempre prestar os melhores serviços para vocês</p>
+    <p class="fonte-especial ">Procuramos sempre prestar os melhores serviços para vocês</p>
   </section>
 
-  <section class="mais-vendidos pb-4 text-center fonte-especial container-fluid">
-    <h2 class="pb-5">Conheça alguns dos nossos serviços</h1>
-
-      <section class="container " id="mais-pedidos">
-        <div class="row justify-content-center">
-  
-          <article class="card card-largura col-xxl-2 col-md-3 col-12 col-sm-0 p-0 m-3" id="borda-cor-especial">
-            <img src="img/carrosel 1.jpg" class="card-img-top card-posicao-imagem card" alt="...">
-              <div class="card-body">
-                <p class="card-text">Especial da casa.</p>
-                <a href="https://api.whatsapp.com/send?phone=5581992626097&text=Gostaria%20de%20fazer%20um%20pedido%20desse%20produto" class="btn" id="bt-cor-especial">Faça seu pedido</a>
-              </div>
-          </article>
-  
-          <article class="card card-largura col-xxl-2 col-md-3 col-12 col-sm-0 p-0 m-3" id="borda-cor-especial">
-            <img src="img/carrosel 1.jpg" class="card-img-top card-posicao-imagem" alt="...">
-              <div class="card-body">
-                <p class="card-text">Especial da casa.</p>
-                <a href="#" class="btn" id="bt-cor-especial">Faça seu pedido</a>
-              </div>
-          </article>
-  
-          <article class="card card-largura col-xxl-2 col-md-3 col-12 col-sm-0 p-0 m-3" id="borda-cor-especial">
-            <img src="img/carrosel 1.jpg" class="card-img-top card-posicao-imagem" alt="...">
-              <div class="card-body">
-                <p class="card-text">Especial da casa.</p>
-                <a href="#" class="btn" id="bt-cor-especial">Faça seu pedido</a>
-              </div>
-          </article>
-  
-          <article class="card card-largura col-xxl-2 col-md-3 col-12 col-sm-0 p-0 m-3" id="borda-cor-especial">
-            <img src="img/carrosel 1.jpg" class="card-img-top card-posicao-imagem" alt="...">
-              <div class="card-body">
-                <p class="card-text">Especial da casa.</p>
-                <a href="" class="btn" id="bt-cor-especial">Faça seu pedido</a>
-              </div>
-          </article>
-  
-          <article class="card card-largura col-xxl-2 col-md-3 col-12 col-sm-0 p-0 m-3" id="borda-cor-especial">
-            <img src="img/carrosel 1.jpg" class="card-img-top card-posicao-imagem" alt="...">
-              <div class="card-body">
-                <p class="card-text">Especial da casa.</p>
-                <a href="#" class="btn" id="bt-cor-especial">Faça seu pedido</a>
-              </div>
-          </article>
-
-            </div>
-        </section>
+  <section class="pb-4 text-center fonte-especial container" id="serviços">
+    <h2 class="pb-2">Conheça alguns dos nossos serviços</h2>
+    <div class="row justify-content-center">
+      
+      <article style="width: 25rem;" class="card col-xxl-2 col-md-3 col-12 col-sm-0 p-0 m-3" id="borda-cor-especial">
+        <img src="img/desenvolvimento_web.jpg" class="card-img-top card-posicao-imagem card" alt="...">
+          <div class="card-body">
+            <h5 class="card-title fonte-especial-escura">Desenvolvimento de sites</h5>
+            <p class="card-text fonte-especial-escura">Trabalhamos com sites responsivos e seguro</p>
+            <a href="#" class="btn" id="bt-cor-especial">Conheça nosso portfólio</a>
+          </div>
+      </article>
+    <h3>Observação</h3>
+    <p>Atualmente estamos trabalhando apenas com desenvolvimento de sites</p>
 
   </section>
 
