Adicionando informações ao site

--- a/index.html
+++ b/index.html
@@ -76,25 +76,17 @@
   </section>
 
   <section class="titulo-principal text-center p-3">
-    <h1 class="fonte-especial">Sejam bem vindos a CETI</h1>
+    <h1 class="fonte-especial">Sejam bem vindos a Ceti</h1>
     <p class="fonte-especial ">Procuramos sempre prestar os melhores serviços para vocês</p>
   </section>
 
-  <section class="pb-4 text-center fonte-especial container" id="serviços">
-    <h2 class="pb-2">Conheça alguns dos nossos serviços</h2>
-    <div class="row justify-content-center">
-      
-      <article style="width: 25rem;" class="card col-xxl-2 col-md-3 col-12 col-sm-0 p-0 m-3" id="borda-cor-especial">
-        <img src="img/desenvolvimento_web.jpg" class="card-img-top card-posicao-imagem card" alt="...">
-          <div class="card-body">
-            <h5 class="card-title fonte-especial-escura">Desenvolvimento de sites</h5>
-            <p class="card-text fonte-especial-escura">Trabalhamos com sites responsivos e seguro</p>
-            <a href="#" class="btn" id="bt-cor-especial">Conheça nosso portfólio</a>
-          </div>
-      </article>
-    <h3>Observação</h3>
-    <p>Atualmente estamos trabalhando apenas com desenvolvimento de sites</p>
-
+  <section class="pb-4  mb-4 text-center fonte-especial container" id="serviços">
+    <h2 class="pb-2">Atuamos com desenvolvimento de sites responsivos para sua empresa</h4>
+    <h4>Sites responsivos que funcionam perfeitamente em computadores e celulares</h3>
+    <img class="imagem-destaque img-thumbnail mb-3" src="img/desenvolvimento_web.jpg" class="img-fluid" alt="Desenvolvimento de sites">
+    <h4 class="">Destaque sua empresa e esteja ao alcance de todos os seus clientes.</h4>
+    <h4 class="">Quem não está na internet hoje não é visto.</h4>
+    <h4 class="">Tenha mais credibilidade e uma presença profissional na internet.</h4>
   </section>
 
   <section class="google-maps container text-center pb-5">
