--- a/quemsomos.html
+++ b/quemsomos.html
@@ -8,8 +8,8 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-giJF6kkoqNQ00vy+HMDP7azOuL0xtbfIcaT9wjKHr8RbDVddVHyTfAAsrekwKmP1" crossorigin="anonymous">
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://fonts.googleapis.com/css2?family=Sansita+Swashed:wght@700&display=swap" rel="stylesheet">
-
 </head>
+
 <body id="body-fundo">
   <header class="fixed-top">
     <nav class="navbar navbar-expand-lg navbar-light bg-light pb-0 pt-0"  id="body-fundo">
@@ -38,8 +38,18 @@
     </nav>
   </header>
 
-  <main>
-
+  <main class="container mt-5">
+    <section id="suspiro-top" class="container fonte-especial text-center">
+      <h1>Quem somos?</h1>
+      <h2>Somos uma pequena empresa de desenvolvimento de sites.</2>
+      <h3>Com foco em trazer visibilidade e mais acessibilidade para nossos parceiros e seus clientes.</h3>
+      <h4>Temos o desejo de melhorar e apoiar nossos clientes carentes de tecnologia.</h4>
+      <h5>Atuando no momento apenas com desenvolvimento de sites mas com o desejo de oferecer outras soluções tecnologicas para nossos clientes.</h5>
+    </section>
+    <section class="container mt-4 fonte-especial text-center">
+      <h3>Você pode nos acompanhar em nossas redes sociais</h3>
+      
+    </section>
   </main>
 
 <!-- Modal -->
