--- a/index.html
+++ b/index.html
@@ -77,16 +77,16 @@
 
   <section class="titulo-principal text-center p-3">
     <h1 class="fonte-especial">Sejam bem vindos a Ceti</h1>
-    <p class="fonte-especial ">Procuramos sempre prestar os melhores serviços para vocês</p>
+    <h3 class="fonte-especial ">Procuramos sempre prestar os melhores serviços para vocês</h3>
   </section>
 
   <section class="pb-4  mb-4 text-center fonte-especial container" id="serviços">
-    <h2 class="pb-2">Atuamos com desenvolvimento de sites responsivos para sua empresa</h4>
-    <h4>Sites responsivos que funcionam perfeitamente em computadores e celulares</h3>
+    <p class="pb-2">Atuamos com desenvolvimento de sites responsivos para sua empresa</p>
+    <p>Sites responsivos que funcionam perfeitamente em computadores e celulares</p>
     <img class="imagem-destaque img-thumbnail mb-3" src="img/desenvolvimento_web.jpg" class="img-fluid" alt="Desenvolvimento de sites">
-    <h4 class="">Destaque sua empresa e esteja ao alcance de todos os seus clientes.</h4>
-    <h4 class="">Quem não está na internet hoje não é visto.</h4>
-    <h4 class="">Tenha mais credibilidade e uma presença profissional na internet.</h4>
+    <p class="">Destaque sua empresa e esteja ao alcance de todos os seus clientes.</p>
+    <p class="">Quem não está na internet hoje não é visto.</p>
+    <p class="">Tenha mais credibilidade e uma presença profissional na internet.</p>
   </section>
 
   <section class="google-maps container text-center pb-5">
@@ -97,7 +97,7 @@
 
   <footer>
     <h5 class="text-center">&copy;opyright</h5>
-    <p class="text-center texto-rodape fonte-especial">Todos os direitos reservados<a class="direitos" href="mailto:brenoepitacio@gmail.com"> Breno Epitácio</a></p>
+    <p class="text-center texto-rodape fonte-especial">Direitos reservados<a class="direitos" href="mailto:brenoepitacio@gmail.com"> Ceti</a></p>
   </footer>
 
 <!-- Modal -->
