--- a/quemsomos.html
+++ b/quemsomos.html
@@ -41,10 +41,10 @@
   <main class="container mt-5">
     <section id="suspiro-top" class="container fonte-especial text-center">
       <h1>Quem somos?</h1>
-      <h2>Somos uma pequena empresa de desenvolvimento de sites.</2>
-      <h3>Com foco em trazer visibilidade e mais acessibilidade para nossos parceiros e seus clientes.</h3>
-      <h4>Temos o desejo de melhorar e apoiar nossos clientes carentes de tecnologia.</h4>
-      <h5>Atuando no momento apenas com desenvolvimento de sites mas com o desejo de oferecer outras soluções tecnologicas para nossos clientes.</h5>
+      <p>Somos uma pequena empresa de desenvolvimento de sites.</p>
+      <p>Com foco em trazer visibilidade e mais acessibilidade para nossos parceiros e seus clientes.</p>
+      <p>Temos o desejo de melhorar e apoiar nossos clientes carentes de tecnologia.</p>
+      <p>Atuando no momento apenas com desenvolvimento de sites mas com o desejo de oferecer outras soluções tecnologicas para nossos clientes.</p>
     </section>
     <section class="container mt-4 fonte-especial text-center">
       <h3>Você pode nos acompanhar em nossas redes sociais</h3>
@@ -87,7 +87,7 @@
   </div>
     <footer>
       <h5 class="text-center">&copy;opyright</h5>
-      <p class="text-center texto-rodape fonte-especial">Todos os direitos reservados<a class="direitos" href="mailto:brenoepitacio@gmail.com"> Breno Epitácio</a></p>
+      <p class="text-center texto-rodape fonte-especial">Direitos reservados<a class="direitos" href="mailto:brenoepitacio@gmail.com"> Ceti</a></p>
     </footer>
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/js/bootstrap.bundle.min.js" integrity="sha384-ygbV9kiqUc6oa4msXn9868pTtWMgiQaeYH7/t7LECLbyPA2x65Kgf80OJFdroafW" crossorigin="anonymous"></script>
 </body>
