--- a/portfólio.html
+++ b/portfólio.html
@@ -136,8 +136,8 @@
 </div>
 
     <footer>
-        <h5 class="text-center">&copy;opyright</h5>
-        <p class="text-center texto-rodape fonte-especial">Todos os direitos reservados<a class="direitos" href="mailto:brenoepitacio@gmail.com"> Breno Epitácio</a></p>
+      <h5 class="text-center">&copy;opyright</h5>
+      <p class="text-center texto-rodape fonte-especial">Direitos reservados<a class="direitos" href="mailto:brenoepitacio@gmail.com"> Ceti</a></p>
     </footer>
 
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/js/bootstrap.bundle.min.js" integrity="sha384-ygbV9kiqUc6oa4msXn9868pTtWMgiQaeYH7/t7LECLbyPA2x65Kgf80OJFdroafW" crossorigin="anonymous"></script>
