--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>ceti</title>
+    <title>Início</title>
     <link rel="stylesheet" href="css/main.css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-giJF6kkoqNQ00vy+HMDP7azOuL0xtbfIcaT9wjKHr8RbDVddVHyTfAAsrekwKmP1" crossorigin="anonymous">
     <link rel="preconnect" href="https://fonts.gstatic.com">
@@ -16,7 +16,7 @@
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
         </button>
-        <img class="logo m-3" src="img/logo breno principal.png">
+        <a href="index.html"><img class="logo m-3" src="img/logo breno principal.png"></a>
         <div class="collapse navbar-collapse justify-content-center" id="navbarNavDropdown">
           <ul class="navbar-nav">
             <li class="nav-item">
@@ -76,7 +76,7 @@
   </section>
 
   <section class="titulo-principal text-center p-3">
-    <h1 class="fonte-especial">Sejam bem vindos a Ceti</h1>
+    <h1 class="fonte-especial">Sejam bem vindos a Exemplo</h1>
     <h3 class="fonte-especial ">Procuramos sempre prestar os melhores serviços para vocês</h3>
   </section>
 
@@ -96,8 +96,14 @@
   </main>
 
   <footer>
+    <ul class="container social-mídia text-center">
+      <li><a href=""><img class="img-social" src="img/twitter.svg"></a></li>
+      <li><a href=""><img class="img-social" src="img/facebook.svg"></a></li>
+      <li><a href=""><img class="img-social" src="img/instagram.svg"></a></li>
+      <li><a href=""><img class="img-social" src="img/linkedin.svg"></a></li>
+    </ul>
     <h5 class="text-center">&copy;opyright</h5>
-    <p class="text-center texto-rodape fonte-especial">Direitos reservados<a class="direitos" href="mailto:brenoepitacio@gmail.com"> Ceti</a></p>
+    <p class="text-center texto-rodape fonte-especial">Direitos reservados<a class="direitos" href="mailto:brenoepitacio@gmail.com"> Breno</a></p>
   </footer>
 
 <!-- Modal -->
