--- a/quemsomos.html
+++ b/quemsomos.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>ceti</title>
+    <title>Quem somos</title>
     <link rel="stylesheet" href="css/main.css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-giJF6kkoqNQ00vy+HMDP7azOuL0xtbfIcaT9wjKHr8RbDVddVHyTfAAsrekwKmP1" crossorigin="anonymous">
     <link rel="preconnect" href="https://fonts.gstatic.com">
@@ -17,7 +17,7 @@
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
         </button>
-        <img class="logo m-3" src="img/logo breno principal.png">
+        <a href="index.html"><img class="logo m-3" src="img/logo breno principal.png"></a>
         <div class="collapse navbar-collapse justify-content-center" id="navbarNavDropdown">
           <ul class="navbar-nav">
             <li class="nav-item">
@@ -48,7 +48,6 @@
     </section>
     <section class="container mt-4 fonte-especial text-center">
       <h3>Você pode nos acompanhar em nossas redes sociais</h3>
-      
     </section>
   </main>
 
@@ -86,8 +85,14 @@
     </div>
   </div>
     <footer>
+      <ul class="container social-mídia text-center">
+        <li><a href=""><img class="img-social" src="img/twitter.svg"></a></li>
+        <li><a href=""><img class="img-social" src="img/facebook.svg"></a></li>
+        <li><a href=""><img class="img-social" src="img/instagram.svg"></a></li>
+        <li><a href=""><img class="img-social" src="img/linkedin.svg"></a></li>
+      </ul>
       <h5 class="text-center">&copy;opyright</h5>
-      <p class="text-center texto-rodape fonte-especial">Direitos reservados<a class="direitos" href="mailto:brenoepitacio@gmail.com"> Ceti</a></p>
+      <p class="text-center texto-rodape fonte-especial">Direitos reservados<a class="direitos" href="mailto:brenoepitacio@gmail.com"> Breno</a></p>
     </footer>
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/js/bootstrap.bundle.min.js" integrity="sha384-ygbV9kiqUc6oa4msXn9868pTtWMgiQaeYH7/t7LECLbyPA2x65Kgf80OJFdroafW" crossorigin="anonymous"></script>
 </body>
