Ajustes de posição na home

--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
     <h3 class="fonte-especial ">Procuramos sempre prestar os melhores serviços para vocês</h3>
   </section>
 
-  <section class="pb-4  mb-4 text-center fonte-especial container" id="serviços">
+  <section class="pb-3 text-center fonte-especial container" id="serviços">
     <p class="pb-2">Atuamos com desenvolvimento de sites responsivos para sua empresa</p>
     <p>Sites responsivos que funcionam perfeitamente em computadores e celulares</p>
     <img class="imagem-destaque img-thumbnail mb-3" src="img/desenvolvimento_web.jpg" class="img-fluid" alt="Desenvolvimento de sites">
@@ -89,7 +89,7 @@
     <p class="">Tenha mais credibilidade e uma presença profissional na internet.</p>
   </section>
 
-  <section class="google-maps container text-center pb-5">
+  <section class="google-maps container text-center pb-3">
     <iframe class="" src="https://www.google.com/maps/embed?pb=!1m14!1m12!1m3!1d15826.134232213124!2d-35.269779400000004!3d-7.40604225!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!5e0!3m2!1spt-BR!2sbr!4v1611884689644!5m2!1spt-BR!2sbr" width="100%" height="400" frameborder="0" style="border:0;" allowfullscreen="" aria-hidden="false" tabindex="0"></iframe>
   </section>
 
